--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             </div>
           </div>
 
-          <!-- Result Container (initially hidden) -->
+          <!-- Result Container (dynamically populated) -->
           <div id="resultContainer" class="w-full"></div>
 
         </div>
@@ -150,20 +150,16 @@
       const buttonShimmer = document.getElementById('buttonShimmer');
       const resultContainer = document.getElementById('resultContainer');
 
-      // State variables
-      let isLoading = false;
-
       const setLoadingState = (loading) => {
-        isLoading = loading;
-        predictButton.disabled = isLoading;
+        predictButton.disabled = loading;
 
-        if (isLoading) {
+        if (loading) {
           buttonText.textContent = 'Consulting Oracle...';
           predictButton.classList.add('bg-amber-700', 'text-amber-300', 'shadow-inner');
           predictButton.classList.remove('bg-gradient-to-br', 'from-amber-500', 'to-yellow-600', 'text-neutral-800', 'shadow-lg', 'shadow-amber-500/40', 'hover:shadow-glow-gold-hover');
           buttonShimmer.style.display = 'none';
 
-          // Show loading message
+          // Show loading animation
           resultContainer.innerHTML = `
             <div class="mt-6 p-4 text-cyan-200 font-share-tech-mono text-sm w-full text-center">
               <div class="animate-pulse">Consulting the digital ether...</div>
@@ -176,7 +172,8 @@
         }
       };
 
-      const displayPrediction = (predictionText) => {
+      const displayResult = (htmlContent) => {
+        // This function injects the raw HTML response into a styled container.
         resultContainer.innerHTML = `
           <div
             class="mt-6 p-4 border border-cyan-700/50 rounded-md bg-cyan-900/20 text-cyan-200 font-share-tech-mono text-sm w-full text-left animate-fadeIn"
@@ -184,7 +181,7 @@
             aria-live="assertive"
           >
             <h3 class="font-cinzel text-cyan-400 [filter:drop-shadow(0_0_0.2rem_#22d3ee)] mb-2 text-base">Oracle's Vision:</h3>
-            <p class="whitespace-pre-wrap">${predictionText}</p>
+            <div class="whitespace-pre-wrap">${htmlContent}</div>
           </div>
         `;
       };
@@ -197,21 +194,31 @@
         }
 
         setLoadingState(true);
-        resultContainer.innerHTML = ''; // Clear previous results immediately
 
         try {
-          // Simulate API call delay
-          await new Promise(resolve => setTimeout(resolve, 2000));
+          // Send POST request to the webhook
+          const response = await fetch('https://n8n-md7t.onrender.com/webhook/prophet', {
+            method: 'POST',
+            headers: {
+              'Content-Type': 'application/json',
+            },
+            body: JSON.stringify({ contractAddress: contractAddress }),
+          });
+
+          // Check if the request was successful
+          if (!response.ok) {
+            throw new Error(`Webhook responded with status: ${response.status}`);
+          }
+
+          // Get the response as text/html
+          const resultHtml = await response.text();
           
-          // Placeholder for the prediction logic
-          const prediction = `Oracle's whisper for ${contractAddress}: The celestial alignments hint at shifting fortunes. Scrutinize the digital entrails closely.`;
-          
-          displayPrediction(prediction);
+          displayResult(resultHtml);
 
         } catch (error) {
           console.error("Error during prediction:", error);
           const errorMessage = "The connection to the ethereal plane was disrupted. Please try again.";
-          displayPrediction(errorMessage);
+          displayResult(errorMessage);
         } finally {
           setLoadingState(false);
         }
