--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         setLoadingState(true);
 
         try {
-          const response = await fetch('https://n8n-4nzw.onrender.com/webhook/prophet', {
+          const response = await fetch('http://app.opuz.cc/webhook-test/prophet', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify({ contractAddress: contractAddress }),
